style.css
@import url("https://fonts.googleapis.com/css2?family=Fira+Sans:wght@500&display=swap");
html {
  height: 100%;
}

body {
  min-height: 100vh;
  background-image: url("./images/watercolor-background.jpg");
  display: grid;
  color: #e8dfdc;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
}

main {
  margin: auto;
  display: grid;
  grid-template-areas:
    "title . . aside aside"
    ". . . aside aside"
    ". . . aside aside"
    ". . . aside aside"
    "overview overview . aside aside";
  grid-template-columns: repeat(3, 24%) repeat(2, 1fr);
  grid-auto-rows: min-content;
  width: 70vw;
  height: 90vh;
  border-radius: 15px;
  background-size: cover;
  width: auto;
  justify-content: end;
}

.day-forecast {
  display: flex;
  justify-content: space-evenly;
}

.weather-detail > p:nth-child(2) {
  color: #e6eced;
}

div.info {
  grid-area: aside;
  display: flex;
  background-color: rgba(15, 64, 88, 0.85);
  flex-direction: column;
  overflow: auto;
  font-family: "Fira Sans";
  height: inherit;
}

div.overview {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  grid-area: overview;
  width: 100%;

  padding-left: 6rem;
  padding-bottom: 1rem;
  gap: 10px;
}

div.info p {
  font-size: 1.5rem;
}
div.overview > p:nth-child(1) {
  font-weight: 600;
  font-size: 5vw;
}
.location > p.city {
  margin: 0;
  font-weight: 500;
  font-size: 4vw;
}

.weather-type > p,
.location > p:nth-child(2) {
  font-weight: 500;
  margin: 0;
  font-size: 2vw;
}

.location > p.type {
  font-size: 24px;
}
h1 {
  grid-area: title;
  padding-left: 3rem;
  padding-top: 1rem;
}

h2 {
  font-weight: bolder;
  color: #e8dfdc;
}
div.cities > p:hover {
  cursor: pointer;
  color: #ebf5ee;
}

.recent-location,
.weather-details {
  border-bottom: 1px solid #f8f4f9;
  width: 70%;
  margin: 0 auto;
}

.forecast {
  width: 100%;
  margin: 0 auto;
}
.forecast > h2 {
  text-align: center;
}

.recent-location {
  color: #9ea9ae;
}

form {
  padding-bottom: 2rem;
}
form > div {
  display: flex;
  justify-content: space-between;
}

label {
  padding-top: 3rem;
  padding-left: 3rem;
  align-self: end;
}

input {
  background-color: inherit;
  border: 0;
  color: #9ea9ae;
  border-bottom: 1px solid #f2edeb;
  border-radius: 3px;
  width: 100%;
  padding: 7px;
  font-size: 14px;
}

.recent-location,
.weather-details {
  padding-left: 1.5rem;
}

.recent-location > p,
.weather-detail > p {
  line-height: 1.5rem;
}

.weather-details > h2 {
  line-height: 3rem;
}

button {
  background-color: #ef7901;
  border: 0;
  width: 80px;
  height: 80px;
  border-radius: inherit;
}

button:hover {
  cursor: pointer;
  background-color: #f18f01;
}

footer {
  text-decoration: dotted;
  text-align: center;
}

.weather-detail {
  display: flex;
  justify-content: space-between;
}
.github-logo {
  overflow: hidden;
  transition-duration: 1s;
  transition-property: transform;
}
.github-logo:hover {
  transform: rotate(360deg);
}

@media (max-width: 1080px) {
  main {
    width: 70%;
    height: 90%;
    grid-template-areas:
      "title . ."
      ". . ."
      "overview overview overview"
      "aside aside aside";
    display: block;
    grid-template-columns: repeat(3, 1fr);
    margin-bottom: 3rem;
  }
  h1 {
    padding-left: 1.5rem;
    padding-top: 0.5rem;
    font-size: 20px;
  }
  footer {
    color: black;
  }
  footer > a:hover {
    color: #0a0a0a;
  }
  .location > p.time {
    font-size: 3vw;
  }
  div.overview {
    padding: 0;
    padding-left: 1rem;
  }
  button {
    width: 70px;
    height: 70px;
  }
}

